# quantum-simulation-lab

./: CHANGELOG.md  CONVENTIONS.md  DIARY.md  Diary.md  Manifest.toml  Project.toml  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: publish.yml  release.yml  tests.yml  update-loc.yml
examples/: JULIA_README.md  dmrg_hamiltonians.py
examples/random_x_field/: run_dmrg.py  run_dmrg_itensors.jl  test_run_dmrg.py
examples/random_x_field/results/: H2_convergence.csv  H2_itensors_convergence.csv
examples/random_z_field/: run_dmrg.py  run_dmrg_itensors.jl  test_run_dmrg.py
examples/random_z_field/results/: H1_convergence.csv  H1_itensors_convergence.csv
examples/zz_plus_z/: __init__.py  run_dmrg.py  run_dmrg_itensors.jl
examples/zz_plus_z/results/: H3_convergence.csv  H3_itensors_convergence.csv
tensor_network_library/: requirements.txt
tensor_network_library/algorithms/: __init__.py  dmrg.py  tebd.py
tensor_network_library/core/: __init__.py  canonical.py  config.py  env.py  gate_application.py  gates.py  hamiltonians.py  index.py  mpo.py  mps.py  operators.py  policy.py  requirements.txt  tensor.py  utils.py
tensor_network_library/hamiltonian/: models.py  operators.py
tensor_network_library/states/: entangled_states.py  qubit_states.py
tests/: test_canonical.py  test_mpo.py  test_mps.py  test_tensor.py
tests/algorithms/: test_dmrg.py  test_tebd.py
tests/core/: test_canonical.py  test_env.py  test_gate_application.py  test_gates.py  test_hamiltonians.py  test_index.py  test_mpo.py  test_mps.py  test_operators.py  test_policy.py  test_tensor.py  test_utils.py
tests/examples/: test_dmrg_hamiltonians.py  test_tebd_physical_problem.py
tests/hamiltonian/: test_hamiltonians.py  test_operators.py
tests/states/: test_entnagled_states.py  test_qubit_states.py
