[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "quantum-simulation-lab"
version = "1.1.3"
description = "A test-driven tensor network playground for finite-size DMRG and MPS/MPO algorithms"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "scipy>=1.17.0",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["tensor_network_library"]
